src/test/resources/Parser/SyntaxErrors/NonOptionalExMark.front
class A:
    void fun(int32 a) {
        a!;
    }